syntax = "proto3";

option csharp_namespace = "gRPC.Client";

package User;

service UserService {
  rpc GetAllUsers (Empty) returns (UserList);
  rpc GetUserDetails (UserRequest) returns (User);

  rpc CreateUser (User) returns (Empty);
  rpc DeleteUser (UserRequest) returns (Empty);
  rpc UpdateUser (User) returns (Empty);
}

message Empty {}

message User {
  string id = 1;
  string name = 2;
}

message UserRequest {
  string id = 1;
}

message UserList {
  repeated User users = 1;
}
